# dag

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
etc/: setup.sh.in
etc/tests/Graph/: connectednestedchildgraph.lua  connectednodes.lua  constraints.lua  duplicateID.lua  empty.lua  nodesFromPlugin.lua  onenode.lua  onenodedynamicports.lua  onenodehybridports.lua  onenodestaticports.lua  typedport.lua  withchildgraph.lua  withmultiplechildren.lua  withnestedchildgraph.lua
etc/tests/NodeEditorLive/: BrowseGraphs.lua  CloneChild.lua  CloneConnected.lua  CloneSimple.lua  ConnectInvalidFrom.lua  ConnectInvalidTo.lua  ConnectSwappedPorts.lua  ConnectThenDisconnect.lua  ConnectToIncompatible.lua  ConnectToSelf.lua  CreateChild.lua  CreateChildFromAnOnlyInternal.lua  CreateChildFromEmptySelection.lua  CreateChildInNonRootGraph.lua  CreateTemplateOneNode.lua  DeleteInvalid.lua  DeleteValid.lua  DisconnectInvalidSignalPathID.lua  EmptySelection.lua  FailedToCreateGraph.lua  LoadConnected.lua  LoadNonZeroId.lua  LoadNonZeroIdDynamic.lua  LoadNonZeroIdHybrid.lua  LoadNonZeroIdStatic.lua  OneFooTyped.lua  Save.lua  SaveOneNode.lua  SelectMultipleInternals.lua  SelectMultipleWithAnOnlyInternal.lua  SelectionAdd.lua  SelectionAll.lua  SelectionClear.lua  SelectionReplaceOne.lua  SelectionSetEmpty.lua  SelectionSetOne.lua  SelectionSubtract.lua  SelectionToggle.lua  SetActiveGraphInvalidPath.lua
include/: Action.h  Boundary.h  ByteBuffer.h  Class.h  CloningFacility.h  Command.h  CreateNode.h  DebugPrinter.h  DynamicLibrary.h  Fields.h  FileSystemTraverser.h  Graph.h  InputStream.h  KeyGenerator.h  LuaInterface.h  MathNode.h  MemoryInputStream.h  MemoryNodeLibrary.h  MemoryOutputStream.h  Menu.h  MetaClass.h  MetaCoroutine.h  MetaField.h  MetaOperation.h  MetaPort.h  Node.h  NodeCategory.h  NodeDescriptor.h  NodeEditorBackEnd.cpp  NodeEditorBackEnd.h  NodeEditorBackEndNodeEditorInterface.h  NodeEditorFrontEnd.h  NodeEditorFrontEndTUI.h  NodeEditorInterface.h  NodeEditorLive.h  NodeLibrary.h  NodePlugin.h  NodePluginScanner.h  Nodes.h  OutputStream.h  (+15 more)
include/config/: Export.h
src/: Action.cpp  ActionRequest.cpp  Boundary.cpp  ByteBuffer.cpp  Class.cpp  CloningFacility.cpp  Command.cpp  CreateNode.cpp  DagBenchmark.cpp  DebugPrinter.cpp  DynamicLibrary.cpp  FileSystemTraverser.cpp  Graph.cpp  InputStream.cpp  KeyGenerator.cpp  LuaInterface.cpp  MathsNode.cpp  MemoryInputStream.cpp  MemoryNodeLibrary.cpp  MemoryOutputStream.cpp  Menu.cpp  MetaClass.cpp  MetaCoroutine.cpp  MetaField.cpp  MetaOperation.cpp  MetaPort.cpp  Node.cpp  NodeBackendBenchmark.cpp  NodeCategory.cpp  NodeEditorBackEndNodeEditorInterface.cpp  NodeEditorFrontEnd.cpp  NodeEditorFrontEndTUI.cpp  NodeEditorInterface.cpp  NodeEditorLive.cpp  NodeLibrary.cpp  NodePlugin.cpp  NodePluginScanner.cpp  Nodes.cpp  OutputStream.cpp  Port.cpp  (+8 more)
src/apps/DagBenchmark/: CMakeLists.txt  DagBenchmark.cpp
src/tests/DagTest/: CMakeLists.txt  DagTest.cpp  RoundTripTest.cpp
src/tests/NodeBackendTest/: CMakeLists.txt  NodeBackendTest.cpp
