SET( DagTest_SRC DagTest.cpp )
ADD_EXECUTABLE( DagTest ${DagTest_SRC} )
TARGET_LINK_LIBRARIES( DagTest PRIVATE dagbase;dag;GTest::gtest;GTest::gtest_main;${LUA_LIBRARIES})
SET_TARGET_PROPERTIES( DagTest PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_RPATH};${CMAKE_INSTALL_PREFIX}/lib" )

INSTALL(TARGETS DagTest RUNTIME DESTINATION bin)
